force-app/main/default/objects/Student__c/fields/Maritial_Status__c.field-meta.xml
<CustomField>
    <fullName>Maritial_Status__c</fullName>
    <label>Maritial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>