force-app/main/default/objects/Student__c/fields/Mark_2__c.field-meta.xml
<CustomField>
    <fullName>Mark_2__c</fullName>
    <label>Mark 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>