force-app/main/default/objects/Student__c/fields/Mark_3__c.field-meta.xml
<CustomField>
    <fullName>Mark_3__c</fullName>
    <label>Mark 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>