force-app/main/default/objects/Student__c/fields/Register_Number_del__c.field-meta.xml
<CustomField>
    <fullName>Register_Number_del__c</fullName>
    <label>Register Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>