force-app/main/default/objects/Student__c/fields/Student_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Name__c</fullName>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Last Name</label>
    <type>Text</type>
</CustomField>