force-app/main/default/objects/Student__c/fields/Sudent_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Sudent_Active_Status__c</fullName>
    <label>Student Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
            <value>
                <fullName>Suspend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>