force-app/main/default/objects/Student__c/fields/TotalMark__c.field-meta.xml
<CustomField>
    <fullName>TotalMark__c</fullName>
    <formula>Mark_1__c  +  Mark_2__c  + Mark_3__c  +Mark_4__c  + Mark_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalMark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>